force-app/main/default/objects/Named_Space__c/Named_Space__c.object-meta.xml
<CustomObject>
    <label>Named Space</label>
    <nameField>
        <displayFormat>NS-{000000}</displayFormat>
        <label>Named Space Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Named Spaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>