force-app/main/default/objects/Named_Space__c/fields/Actual_Location__c.field-meta.xml
<CustomField>
    <fullName>Actual_Location__c</fullName>
    <label>Actual Location</label>
    <length>10</length>
    <type>Text</type>
</CustomField>