force-app/main/default/objects/Named_Space__c/fields/Additional_Text_on_Plaque__c.field-meta.xml
<CustomField>
    <fullName>Additional_Text_on_Plaque__c</fullName>
    <label>Additional Text on Plaque</label>
    <type>TextArea</type>
</CustomField>