force-app/main/default/objects/Named_Space__c/fields/Dedication_Date__c.field-meta.xml
<CustomField>
    <fullName>Dedication_Date__c</fullName>
    <label>Dedication Date</label>
    <type>Date</type>
</CustomField>