force-app/main/default/objects/Named_Space__c/fields/Formal_Title__c.field-meta.xml
<CustomField>
    <fullName>Formal_Title__c</fullName>
    <label>Signage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>