force-app/main/default/objects/Named_Space__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Named Spaces</relationshipLabel>
    <relationshipName>Named_Spaces_Fund</relationshipName>
    <type>Lookup</type>
</CustomField>