force-app/main/default/objects/Named_Space__c/fields/Initial_Location__c.field-meta.xml
<CustomField>
    <fullName>Initial_Location__c</fullName>
    <label>Initial Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>