force-app/main/default/objects/Named_Space__c/fields/Named_Space_Location__c.field-meta.xml
<CustomField>
    <fullName>Named_Space_Location__c</fullName>
    <label>Named Space Location</label>
    <referenceTo>Named_Space_Location__c</referenceTo>
    <relationshipLabel>Named Spaces</relationshipLabel>
    <relationshipName>Named_Spaces_Named_Space_Location</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>