force-app/main/default/objects/Named_Space__c/fields/Named_Space_Notes__c.field-meta.xml
<CustomField>
    <fullName>Named_Space_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>