force-app/main/default/objects/Named_Space__c/fields/Occupant__c.field-meta.xml
<CustomField>
    <fullName>Occupant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Occupant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Named Spaces</relationshipLabel>
    <relationshipName>Named_Spaces_Occupant</relationshipName>
    <type>Lookup</type>
</CustomField>