force-app/main/default/objects/Named_Space__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Named_Space_Location__c</columns>
    <columns>Formal_Title__c</columns>
    <columns>Actual_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>