force-app/main/default/objects/Named_Space__c/listViews/Marston_Hall.listView-meta.xml
<ListView>
    <fullName>Marston_Hall</fullName>
    <columns>NAME</columns>
    <columns>Named_Space_Location__c</columns>
    <columns>Formal_Title__c</columns>
    <columns>Actual_Location__c</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Named_Space_Location__c</field>
        <operation>equals</operation>
        <value>Marston Hall</value>
    </filters>
    <label>Marston Hall</label>
</ListView>